--- a/BestLibrary/BestLibrary.csproj
+++ b/BestLibrary/BestLibrary.csproj
@@ -6,6 +6,7 @@
     <PackageId>BestLibrary</PackageId>
     <Authors>Mike Lowe</Authors>
     <Description>The Best Library</Description>
+    <PackageVersion>1.1.0</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
