Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*.Tests.csproj'
-    arguments: '--collect:"Code Coverage"'
+    arguments: '--collect "Code Coverage"'
 
 - task: PublishCodeCoverageResults@1
   inputs:
