Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,6 @@ steps:
 
 - task: PublishCodeCoverageResults@1
   inputs:
-    summaryFileLocation: '**/coverage.cobertura.xml'
+    summaryFileLocation: '**/*.coverage'
     reportDirectory: $(Build.SourcesDirectory)\results
     codecoverageTool: cobertura
