Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,8 @@ steps:
     reportDirectory: $(Build.SourcesDirectory)\results
     codecoverageTool: cobertura
 
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '**/*.coverage'
+    ArtifactName: 'coverage'
+    publishLocation: 'Container'
