Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,3 +10,8 @@ steps:
     command: 'test'
     projects: '**/*.Tests.csproj'
     arguments: '--collect "Code Coverage"'
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    summaryFileLocation: '**/*.coverage' 
+    codecoverageTool: cobertura
