--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,10 @@ steps:
     command: 'test'
     projects: '**/*.Tests.csproj'
     arguments: '--collect "Code Coverage"'
-
+    
 - task: PublishCodeCoverageResults@1
   inputs:
-    summaryFileLocation: '**/*.coverage' 
-    codecoverageTool: cobertura
+    codeCoverageTool: 'Cobertura'
+    summaryFileLocation: '**/*.coverage'
+    reportDirectory: '$(Agent.TempDirectory)'
+    failIfCoverageEmpty: true
