Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,5 @@ steps:
   inputs:
     codeCoverageTool: 'Cobertura'
     summaryFileLocation: '**/*.coverage'
-    reportDirectory: '$(Agent.TempDirectory)'
+    reportDirectory: '$(Agent.TempDirectory)/**'
     failIfCoverageEmpty: true
