--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*.Tests.csproj'
-    arguments: '--collect "Code Coverage"'
+    arguments: '/p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
     
 - task: PublishCodeCoverageResults@1
   inputs:
