Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -4,7 +4,11 @@
 # https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
 
 trigger:
-- master
+- releases/*
+
+name: $(Build.SourceBranchName).$(rev:.r)
+
+
 
 pool:
   vmImage: 'windows-latest'
