Update azure-pipelines-ci.yml for Azure Pipelines

--- a/azure-pipelines-ci.yml
+++ b/azure-pipelines-ci.yml
@@ -6,7 +6,7 @@
 trigger:
 - releases/*
 
-name: $(Build.SourceBranchName).$(rev:.r)
+name: $(Build.SourceBranchName)$(rev:.r)
 
 pool:
   vmImage: 'windows-latest'
