--- a/azure-pipelines-ci.yml
+++ b/azure-pipelines-ci.yml
@@ -26,13 +26,13 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
-    projects: '**/*.csproj'
+    projects: '**/BestLibrary.csproj'
     configuration: '$(buildConfiguration)'
 
 - task: NuGetCommand@2
   inputs:
     command: 'pack'
-    packagesToPack: '**/*.csproj'
+    packagesToPack: '**/BestLibrary.csproj'
     versioningScheme: 'byBuildNumber'
     includeSymbols: true
 
